<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:gravity="center|top"
    android:orientation="vertical"
    android:scrollbarSize="4dp"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scoreCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/life"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lifeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="3"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="60"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_margin="20dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/blue"
        android:elevation="100dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#FAFAFA"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/answerTextView"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_margin="20dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/blue"
        android:elevation="100dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/answer_hint"
        android:inputType="number"
        android:textColor="#EFECEC"
        android:textColorHint="#FAFAFA"
        android:textSize="20sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:backgroundTint="@null"
            android:elevation="100dp"
            android:text="ok"
            android:textSize="20sp" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:backgroundTint="@null"
            android:elevation="100dp"
            android:text="@string/next"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>